  [mathias.leimgruber]

- Use Batch.fromPagenumber.
  [mathias.leimgruber]


3.3.4 (2013-01-25)
------------------

- Add INoExtJS marker interface disabling extjs when provided
  by the tabbview and the tab
  [mathias.leimgruber]


3.3.3 (2013-01-21)
------------------

- Add default dynamic batching form to batching template. #11
  [jone]

- Fix javascript order in ExtJS profile.
  [jone]

- Fix IE7 element positioning issue by force repainting.
  [jone]

- Do not hide the right portlet column.
  [Julian Infanger]

- Fix failing test introduced by the "anonymous access" change.
  Also test extjs configuration specifically anonymous.
  [jone]


3.3.2 (2012-10-26)
------------------

- Basic support for using the tabbed view anonymously.
  ExtJS is not supported and automatically disabled for anonymous users.
  [jone]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Added condition for not showing uploadbox if text is dragged on the website.
  [Julian Infanger, jone]

- Use first tabbedview by default when accessing tabbed view anonymously.
  [jone]


3.3.1 (2012-10-16)
------------------

- Cleanup readme
  [mathias.leimgruber]


3.3 (2012-10-16)
----------------

- Load upload function only on tabbedview.
  [mathias.leimgruber]

- Tabbedview: do not flush all parameters when re-sorting, but only the relevant ones.
  This allows to keep additional parameters (e.g. filters) while sorting.
  [jone]

- Reset view_name param before changing a tab.
  [mathias.leimgruber]

- Added min_height to tabbedview-body. Grey-out the tabbedview-body while loading a new tab.
  [Julian Infanger]

- Fix default tab key storage, so that it includes the user id.
  [jone]

- Adjust french translation.
  [philippegross]

- Add English translations.
  [jone]

- Add functionality for setting the default tab of a tabbed view.
  [jone]

- Change dictstorage to adapt IBrowserView instead of IListingView.
  [jone]
